@@ -5,6 +5,10 @@ TODO:
  * Improved socket performance (would be nice if we could be used as a "hub")
  * "The message is blocked by User Interface Privilege Isolation, Administrative applications that need to see it can allow it through by calling ChangeWindowMessageFilter after making sure the necessary security precautions are in place. "
 
+2008-06-18 MickeM
+ * Fixed an issue in regards to reading the return packet in the in the NRPEClient (now it works).
+   Before only the first 1024 bytes were used.
+
 2008-06-15 MickeM
  * Applied patches from Jeff Goldschrafe <goldschr AT cshl.edu>
    + CheckDriveSize now uses "all drives" when no drive is specified.
